[dev-1] ключ идемпотентности
